--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <div class="carousel">
+            <div class="arrow arrow-up"><i class="fa-solid fa-chevron-up"></i></div>
+            <div class="arrow arrow-down"><i class="fa-solid fa-chevron-down"></i></div>
+            <div class="item"><img src="img/01.webp" alt=""></div>
+        </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
