--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div class="container">
         <div class="carousel">
             <div class="arrow arrow-up"><i class="fa-solid fa-chevron-up"></i></div>
-            <div class="arrow arrow-down"><i class="fa-solid fa-chevron-down"></i></div>
+            <div class="arrow arrow-down"><i class="fa-solid fa-chevron-down"></i></div>           
         </div>
+        <div class="thumbnail"></div>
     </div>
     <script src="js/main.js"></script>
 </body>
