--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- /font awesome -->
+    <!-- mycss -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- /mycss -->
 </head>
 <body>
     <div class="container">
+        <!-- carosello -->
         <div class="carousel">
             <div class="arrow arrow-up"><i class="fa-solid fa-chevron-up"></i></div>
             <div class="arrow arrow-down"><i class="fa-solid fa-chevron-down"></i></div>           
         </div>
+        <!-- /carosello -->
+        <!-- thumbnail -->
         <div class="thumbnail"></div>
+        <!-- /thumbnail -->
     </div>
+    <!-- js -->
     <script src="js/main.js"></script>
+    <!-- js -->
 </body>
 </html>
